crates/zenith/tests/snapshots/screens__help_overlay_end__80x24__light.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
  ┌ keys ────────────────────────────────────────────────────────────────────┐
  │   q, Ctrl+O               close                                          │
  │                                                                          │
  │ This help                                                                │
  │   ?, q                    close                                          │
  │                                                                          │
  │ When SOLAR fails at the start                                            │
  │   r                       try again                                      │
  │   Enter                   go to the tabs, to read the Log                │
  │   q                       quit                                           │
  │                                                                          │
  │ The mouse                                                                │
  │   wheel                   scroll what is under the pointer; in a list,   │
  │                           move the selection                             │
  │   Shift+drag              select text while ZENITH has the mouse;        │
  │                           Option+drag in iTerm2                          │
  │   /mouse                  give the mouse to the terminal, and take it    │
  │                           back                                           │
  │                                                                          │
  │ Every action has a plain key or a Ctrl key; Alt and the function keys    │
  │ are extra routes.                                                        │
  └ Esc close  ↑ ↓ scroll  ──────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 1.84 ms ─── in orbit 42s ───────────
--- every cell not listed is #17161C on #F5F1E8
 0:  0-7   #8C4907 on #F5F1E8 bold
 0: 10-18  #8C4907 on #F5F1E8 bold underlined
 0: 21-26  #555355 on #F5F1E8
 0: 29-33  #555355 on #F5F1E8
 0: 36-44  #555355 on #F5F1E8
 0: 45-72  #868482 on #F5F1E8
 0: 73-73  #8C4907 on #F5F1E8 bold
 0: 74-79  #555355 on #F5F1E8
 1:  2-2   #868482 on #F5F1E8
 1:  3-8   #8C4907 on #F5F1E8 bold
 1:  9-77  #868482 on #F5F1E8
 2:  2-2   #868482 on #F5F1E8
 2:  6-27  #8C4907 on #F5F1E8 bold
 2: 77-77  #868482 on #F5F1E8
 3:  2-2   #868482 on #F5F1E8
 3: 77-77  #868482 on #F5F1E8
 4:  2-2   #868482 on #F5F1E8
 4:  4-12  #8C4907 on #F5F1E8 bold
 4: 77-77  #868482 on #F5F1E8
 5:  2-2   #868482 on #F5F1E8
 5:  6-27  #8C4907 on #F5F1E8 bold
 5: 77-77  #868482 on #F5F1E8
 6:  2-2   #868482 on #F5F1E8
 6: 77-77  #868482 on #F5F1E8
 7:  2-2   #868482 on #F5F1E8
 7:  4-32  #8C4907 on #F5F1E8 bold
 7: 77-77  #868482 on #F5F1E8
 8:  2-2   #868482 on #F5F1E8
 8:  6-27  #8C4907 on #F5F1E8 bold
 8: 77-77  #868482 on #F5F1E8
 9:  2-2   #868482 on #F5F1E8
 9:  6-27  #8C4907 on #F5F1E8 bold
 9: 77-77  #868482 on #F5F1E8
10:  2-2   #868482 on #F5F1E8
10:  6-27  #8C4907 on #F5F1E8 bold
10: 77-77  #868482 on #F5F1E8
11:  2-2   #868482 on #F5F1E8
11: 77-77  #868482 on #F5F1E8
12:  2-2   #868482 on #F5F1E8
12:  4-12  #8C4907 on #F5F1E8 bold
12: 77-77  #868482 on #F5F1E8
13:  2-2   #868482 on #F5F1E8
13:  6-27  #8C4907 on #F5F1E8 bold
13: 77-77  #868482 on #F5F1E8
14:  2-2   #868482 on #F5F1E8
14: 77-77  #868482 on #F5F1E8
15:  2-2   #868482 on #F5F1E8
15:  6-27  #8C4907 on #F5F1E8 bold
15: 77-77  #868482 on #F5F1E8
16:  2-2   #868482 on #F5F1E8
16: 77-77  #868482 on #F5F1E8
17:  2-2   #868482 on #F5F1E8
17:  6-27  #8C4907 on #F5F1E8 bold
17: 77-77  #868482 on #F5F1E8
18:  2-2   #868482 on #F5F1E8
18: 77-77  #868482 on #F5F1E8
19:  2-2   #868482 on #F5F1E8
19: 77-77  #868482 on #F5F1E8
20:  2-2   #868482 on #F5F1E8
20:  4-72  #555355 on #F5F1E8
20: 77-77  #868482 on #F5F1E8
21:  2-2   #868482 on #F5F1E8
21:  4-20  #555355 on #F5F1E8
21: 77-77  #868482 on #F5F1E8
22:  2-3   #868482 on #F5F1E8
22:  4-6   #8C4907 on #F5F1E8 bold
22:  7-14  #555355 on #F5F1E8
22: 15-17  #8C4907 on #F5F1E8 bold
22: 18-26  #555355 on #F5F1E8
22: 27-77  #868482 on #F5F1E8
23:  0-2   #868482 on #F5F1E8
23:  3-3   #8C4907 on #F5F1E8
23:  4-6   #868482 on #F5F1E8
23:  7-17  #8C4907 on #F5F1E8 bold
23: 18-20  #555355 on #F5F1E8
23: 28-32  #868482 on #F5F1E8
23: 33-42  #555355 on #F5F1E8
23: 50-54  #868482 on #F5F1E8
23: 55-63  #555355 on #F5F1E8
23: 67-79  #868482 on #F5F1E8
