crates/zenith/tests/snapshots/screens__help_overlay_end__80x24__night.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
  ┌ keys ────────────────────────────────────────────────────────────────────┐
  │   q, Ctrl+O               close                                          │
  │                                                                          │
  │ This help                                                                │
  │   ?, q                    close                                          │
  │                                                                          │
  │ When SOLAR fails at the start                                            │
  │   r                       try again                                      │
  │   Enter                   go to the tabs, to read the Log                │
  │   q                       quit                                           │
  │                                                                          │
  │ The mouse                                                                │
  │   wheel                   scroll what is under the pointer; in a list,   │
  │                           move the selection                             │
  │   Shift+drag              select text while ZENITH has the mouse;        │
  │                           Option+drag in iTerm2                          │
  │   /mouse                  give the mouse to the terminal, and take it    │
  │                           back                                           │
  │                                                                          │
  │ Every action has a plain key or a Ctrl key; Alt and the function keys    │
  │ are extra routes.                                                        │
  └ Esc close  ↑ ↓ scroll  ──────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 1.84 ms ─── in orbit 42s ───────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 10-18  #FFC23D on #0B0C14 bold underlined
 0: 21-26  #9C9A97 on #0B0C14
 0: 29-33  #9C9A97 on #0B0C14
 0: 36-44  #9C9A97 on #0B0C14
 0: 45-72  #646365 on #0B0C14
 0: 73-73  #FFC23D on #0B0C14 bold
 0: 74-79  #9C9A97 on #0B0C14
 1:  2-2   #646365 on #0B0C14
 1:  3-8   #FFC23D on #0B0C14 bold
 1:  9-77  #646365 on #0B0C14
 2:  2-2   #646365 on #0B0C14
 2:  6-27  #FFC23D on #0B0C14 bold
 2: 77-77  #646365 on #0B0C14
 3:  2-2   #646365 on #0B0C14
 3: 77-77  #646365 on #0B0C14
 4:  2-2   #646365 on #0B0C14
 4:  4-12  #FFC23D on #0B0C14 bold
 4: 77-77  #646365 on #0B0C14
 5:  2-2   #646365 on #0B0C14
 5:  6-27  #FFC23D on #0B0C14 bold
 5: 77-77  #646365 on #0B0C14
 6:  2-2   #646365 on #0B0C14
 6: 77-77  #646365 on #0B0C14
 7:  2-2   #646365 on #0B0C14
 7:  4-32  #FFC23D on #0B0C14 bold
 7: 77-77  #646365 on #0B0C14
 8:  2-2   #646365 on #0B0C14
 8:  6-27  #FFC23D on #0B0C14 bold
 8: 77-77  #646365 on #0B0C14
 9:  2-2   #646365 on #0B0C14
 9:  6-27  #FFC23D on #0B0C14 bold
 9: 77-77  #646365 on #0B0C14
10:  2-2   #646365 on #0B0C14
10:  6-27  #FFC23D on #0B0C14 bold
10: 77-77  #646365 on #0B0C14
11:  2-2   #646365 on #0B0C14
11: 77-77  #646365 on #0B0C14
12:  2-2   #646365 on #0B0C14
12:  4-12  #FFC23D on #0B0C14 bold
12: 77-77  #646365 on #0B0C14
13:  2-2   #646365 on #0B0C14
13:  6-27  #FFC23D on #0B0C14 bold
13: 77-77  #646365 on #0B0C14
14:  2-2   #646365 on #0B0C14
14: 77-77  #646365 on #0B0C14
15:  2-2   #646365 on #0B0C14
15:  6-27  #FFC23D on #0B0C14 bold
15: 77-77  #646365 on #0B0C14
16:  2-2   #646365 on #0B0C14
16: 77-77  #646365 on #0B0C14
17:  2-2   #646365 on #0B0C14
17:  6-27  #FFC23D on #0B0C14 bold
17: 77-77  #646365 on #0B0C14
18:  2-2   #646365 on #0B0C14
18: 77-77  #646365 on #0B0C14
19:  2-2   #646365 on #0B0C14
19: 77-77  #646365 on #0B0C14
20:  2-2   #646365 on #0B0C14
20:  4-72  #9C9A97 on #0B0C14
20: 77-77  #646365 on #0B0C14
21:  2-2   #646365 on #0B0C14
21:  4-20  #9C9A97 on #0B0C14
21: 77-77  #646365 on #0B0C14
22:  2-3   #646365 on #0B0C14
22:  4-6   #FFC23D on #0B0C14 bold
22:  7-14  #9C9A97 on #0B0C14
22: 15-17  #FFC23D on #0B0C14 bold
22: 18-26  #9C9A97 on #0B0C14
22: 27-77  #646365 on #0B0C14
23:  0-2   #646365 on #0B0C14
23:  3-3   #FFC23D on #0B0C14
23:  4-6   #646365 on #0B0C14
23:  7-17  #FFC23D on #0B0C14 bold
23: 18-20  #9C9A97 on #0B0C14
23: 28-32  #646365 on #0B0C14
23: 33-42  #9C9A97 on #0B0C14
23: 50-54  #646365 on #0B0C14
23: 55-63  #9C9A97 on #0B0C14
23: 67-79  #646365 on #0B0C14
