crates/zenith/tests/snapshots/screens__help_overlay_end__80x24__no_colour_ascii.snap
---
source: crates/zenith/tests/screens.rs
expression: screen(&buffer)
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                .     .     ? keys
  + keys --------------------------------------------------------------------+
  |   q, Ctrl+O               close                                          |
  |                                                                          |
  | This help                                                                |
  |   ?, q                    close                                          |
  |                                                                          |
  | When SOLAR fails at the start                                            |
  |   r                       try again                                      |
  |   Enter                   go to the tabs, to read the Log                |
  |   q                       quit                                           |
  |                                                                          |
  | The mouse                                                                |
  |   wheel                   scroll what is under the pointer; in a list,   |
  |                           move the selection                             |
  |   Shift+drag              select text while ZENITH has the mouse;        |
  |                           Option+drag in iTerm2                          |
  |   /mouse                  give the mouse to the terminal, and take it    |
  |                           back                                           |
  |                                                                          |
  | Every action has a plain key or a Ctrl key; Alt and the function keys    |
  | are extra routes.                                                        |
  + Esc close  Up Down scroll  ----------------------------------------------+
 --*-- SOLAR 0.1.0 - solar/1 --- last call 1.84 ms --- in orbit 42s -----------
--- every cell not listed is - on -
 0:  0-7   - on - bold
 0: 10-18  - on - bold underlined
 0: 45-72  - on - dim
 0: 73-73  - on - bold
 1:  2-2   - on - dim
 1:  3-8   - on - bold dim
 1:  9-77  - on - dim
 2:  2-2   - on - dim
 2:  6-27  - on - bold
 2: 77-77  - on - dim
 3:  2-2   - on - dim
 3: 77-77  - on - dim
 4:  2-2   - on - dim
 4:  4-12  - on - bold
 4: 77-77  - on - dim
 5:  2-2   - on - dim
 5:  6-27  - on - bold
 5: 77-77  - on - dim
 6:  2-2   - on - dim
 6: 77-77  - on - dim
 7:  2-2   - on - dim
 7:  4-32  - on - bold
 7: 77-77  - on - dim
 8:  2-2   - on - dim
 8:  6-27  - on - bold
 8: 77-77  - on - dim
 9:  2-2   - on - dim
 9:  6-27  - on - bold
 9: 77-77  - on - dim
10:  2-2   - on - dim
10:  6-27  - on - bold
10: 77-77  - on - dim
11:  2-2   - on - dim
11: 77-77  - on - dim
12:  2-2   - on - dim
12:  4-12  - on - bold
12: 77-77  - on - dim
13:  2-2   - on - dim
13:  6-27  - on - bold
13: 77-77  - on - dim
14:  2-2   - on - dim
14: 77-77  - on - dim
15:  2-2   - on - dim
15:  6-27  - on - bold
15: 77-77  - on - dim
16:  2-2   - on - dim
16: 77-77  - on - dim
17:  2-2   - on - dim
17:  6-27  - on - bold
17: 77-77  - on - dim
18:  2-2   - on - dim
18: 77-77  - on - dim
19:  2-2   - on - dim
19: 77-77  - on - dim
20:  2-2   - on - dim
20: 77-77  - on - dim
21:  2-2   - on - dim
21: 77-77  - on - dim
22:  2-3   - on - dim
22:  4-6   - on - bold dim
22:  7-14  - on - dim
22: 15-21  - on - bold dim
22: 22-77  - on - dim
23:  0-2   - on - dim
23:  3-3   - on - bold
23:  4-6   - on - dim
23:  7-17  - on - bold
23: 28-32  - on - dim
23: 50-54  - on - dim
23: 67-79  - on - dim
